Отправка на проверку №2